--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,20 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Andrey Syroyezhkin
+email: AndreySyroyezhkin@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Web Developer & Designer. Helping folks bring their businesses to the web using Ruby/Rails, Javascript/React, and CSS Grid/Flexbox. Custom mobile first design; logos/banners and other web assets as requested. I aim to make tech as human as possible. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: andreysyroyezhkin
+github_username:  asyroyez
 
 # Build settings
-theme: minima
+# theme: minima
 plugins:
   - jekyll-feed
+  - github-pages
 
 # Exclude from processing.
 # The following items will not be processed, by default.
