--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,8 @@ github_username:  asyroyez
 # theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-seo-tag
   - github-pages
 
 # Exclude from processing.
