Add sass directory and split css into resets, mobile, and desktop styles. Add more html pages for future development.

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -2,3 +2,9 @@
   link: /
 - name: Blog
   link: /blog.html
+- name: Portfolio
+  link: /portfolio.html
+- name: Content
+  link: /content.html
+- name: Art
+  link: /art.html
